@@ -159,9 +159,11 @@ extern int map_adventure_offset_y;
 #define HELP_MESSAGE_BREAKPOINT_ACTION \
 "Action can be one of the following: \n\n" \
 "menu or break or empty string: Breaks current execution of program\n" \
-"call address: Calls memory address\n" \
+"call address: Calls memory address, address is an expression\n" \
+"disassemble address: Dissassemble address, address is an expression\n" \
 "printc c: Print character c to console\n" \
 "printe expression: Print expression following the same syntax as breakpoints and evaluate expression\n" \
+"printregs: Print registers\n" \
 "prints string: Prints string to console\n" \
 "putv expression: Adds expression result value in the Debug Memory Zone. Result is always treated as a 8-bit value. Zone is cleared when running Reset\n" \
 "quicksave: Saves a quick snapshot\n" \
@@ -169,7 +171,7 @@ extern int map_adventure_offset_y;
 "set-register string: Sets register indicated on string. Example: set-register PC=32768\n" \
 "start-transaction-log: Starts the transaction log, require that you define the log file before\n" \
 "stop-transaction-log: Stops the transaction log\n" \
-"write address value: Write memory address with indicated value\n" \
+"write address value: Write memory address with indicated value, address and value are expressions\n" \
 
 
 #endif
